# image-layer-flattener

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_stats.js  image_map.json  image_map_with_classes.json  nft-metadata.json  nifty-magic-image-maker
src/: file_reader.rs  main.rs  nft_metadata_writer.rs  nifty_maker.rs  weighted_image_chooser.rs
src/file_reader/: mod.rs
