[package]
name = "nifty-magic-image-maker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
rand = "0.8.4"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0"